Fix flaky LayerTreeHostCopyRequestTestDeleteTexture test.

Because CopyOutputRequests make an extra RenderPass, which is backed
by a texture, we do a follow-up draw to remove that texture. This
raced with the texture counting that the test was doing. So wait
for the draw before proceeding.

R=vmpstr@chromium.org
BUG=675684
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2687143003
Cr-Commit-Position: refs/heads/master@{#449411}

Former-commit-id: 6cd4cd4c30979c6fc520b090f1b64e3bcd1d0868